--- a/css/navbar.css
+++ b/css/navbar.css
@@ -62,12 +62,48 @@
   letter-spacing: 1px;
 }
 
+.dropdown-item {
+  padding-left: 10px !important;
+  color: white !important;
+  background-color: transparent !important;
+}
+
+.dropdown-item:hover {
+  opacity: 1.5 !important;
+  font-weight: bold !important;
+}
+
+.dropdown-item:link,
+.dropdown-item:visited {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.dropdown-item:hover,
+.dropdown-item:active {
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+  text-shadow: 0 0.5rem 1rem black;
+}
+
 .nav-link:hover {
   font-weight: bold;
 }
 
-#about {
+#programming-dropdown,
+#entertainment-dropdown {
   color: rgb(7, 187, 61) !important;
+}
+
+#entertainment-dropdown-links,
+#programming-dropdown-links {
+  background-color: #343a40 !important;
 }
 
 .nav-link,
