--- a/css/navbar.css
+++ b/css/navbar.css
@@ -39,6 +39,11 @@
   display: flex;
 }
 
+#search-wrapper input,
+#search-wrapper button {
+  border-radius: 0px !important;
+}
+
 #search {
   border-bottom: 1px solid var(--plainWhite) !important;
   background-color: transparent;
